@@ -28,7 +28,7 @@ class TestCommand(test.test):
 
 import sys
 
-install_requires = ["uuid>=1.30", "fpconst>=0.7.2"]
+install_requires = ["uuid>=1.30", "fpconst>=0.7.2", "Importing>=1.9.2"]
 if sys.version_info < (2, 5):
     install_requires.extend(["elementtree >= 1.2.6"])
 
